manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-example
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
spec:
  tls:
  - hosts:
    - demo.azure.com
    secretName: aks-ingress-tls
  rules:
  - http:
      paths:
      - backend:
          serviceName: servicea
          servicePort: 3000
        path: /service-a(/|$)(.*)
      - backend:
          serviceName: serviceb
          servicePort: 3000
        path: /service-b(/|$)(.*)
      - backend:
          serviceName: servicea
          servicePort: 3000
        path: /(.*)
